   - pred `uinit/2`
   - pred `uallocate/1`

### Changes to the `diet` module

* The following obsolete predicate has been removed:

   - pred `empty/1`

### Changes to the `digraph` module

* The following type has had its typeclass memberships changed:

   - The `digraph_key(T)` type is now an instance of the `uenum` typeclass,
     and is no longer an instance of the `enum` typeclass.

### Changes to the `enum` module

* The following typeclass has been added:

   - typeclass `uenum/1`

* The following function has been added:

   - func `det_from_uint/1`

### Changes to the `fat_sparse_bitset` module

* The following type has had its typeclass memberships changed:

   - The `fat_sparse_bitset(T)` type now requires `T` to be an instance of the
     `uenum` typeclass, replacing the earlier requirement that it be
     a member of the `enum` typeclass.

* The following obsolete predicate has been removed:

   - pred `empty/1`

### Changes to the `float` module

* The following function has been marked obsolete:

   - func `float_to_doc/1`

### Changes to the `hash_table` module

* The following predicate has been added:

    - pred `lookup/3`

* The following obsolete predicates have been removed:

    - pred `char_hash/2`
    - pred `float_hash/2`
    - pred `generic_hash/2`
    - pred `int_hash/2`
    - pred `string_hash/2`
    - pred `uint_hash/2`

### Changes to the `int` module

* The following type has had its typeclass memberships changed:

    - The type `int` is now an instance of the new `uenum` typeclass.

* The following predicates and functions have been added:

    - func `<<u/2`
    - func `>>u/2`
    - func `unchecked_left_ushift/2`
    - func `unchecked_right_ushift/2`
    - func `ubits_per_int/0`
    - pred `ubits_per_int/1`

* The following function has been marked obsolete:

   - func `int_to_doc/1`

### Changes to the `int8` module

* The following functions have been added:

    - func `<<u/2`
    - func `>>u/2`