@@ -1,0 +1,99 @@
+---- G ----
+digraph {
+  /* 6 edges */
+  A -> B;
+  A -> C;
+  B -> C;
+  B -> X;
+  C -> A;
+  X -> Y;
+}
+
+---- tc(G) ----
+digraph {
+  /* 16 edges */
+  A -> A;
+  A -> B;
+  A -> C;
+  A -> X;
+  A -> Y;
+  B -> A;
+  B -> B;
+  B -> C;
+  B -> X;
+  B -> Y;
+  C -> A;
+  C -> B;
+  C -> C;
+  C -> X;
+  C -> Y;
+  X -> Y;
+}
+
+---- slow_tc(G) ----
+digraph {
+  /* 16 edges */
+  A -> A;
+  A -> B;
+  A -> C;
+  A -> X;
+  A -> Y;
+  B -> A;
+  B -> B;
+  B -> C;
+  B -> X;
+  B -> Y;
+  C -> A;
+  C -> B;
+  C -> C;
+  C -> X;
+  C -> Y;
+  X -> Y;
+}
+
+---- rtc(G) ----
+digraph {
+  /* 18 edges */
+  A -> A;
+  A -> B;
+  A -> C;
+  A -> X;
+  A -> Y;
+  B -> A;
+  B -> B;
+  B -> C;
+  B -> X;
+  B -> Y;
+  C -> A;
+  C -> B;
+  C -> C;
+  C -> X;
+  C -> Y;
+  X -> X;
+  X -> Y;
+  Y -> Y;
+}
+
+---- slow_rtc(G) ----
+digraph {
+  /* 18 edges */
+  A -> A;
+  A -> B;
+  A -> C;
+  A -> X;
+  A -> Y;
+  B -> A;
+  B -> B;
+  B -> C;
+  B -> X;
+  B -> Y;
+  C -> A;
+  C -> B;
+  C -> C;
+  C -> X;
+  C -> Y;
+  X -> X;
+  X -> Y;
+  Y -> Y;
+}
+
