@@ -1,0 +1,8 @@
+[
+  "A" - "B",
+  "A" - "C",
+  "B" - "C",
+  "C" - "A",
+  "B" - "X",
+  "X" - "Y"
+].
